# my_weather_api_service

./: Dockerfile  main.py  pyproject.toml
data/: 1688497200.wgf4  1688500800.wgf4  1688504400.wgf4
dto/: __init__.py  header.py  point.py  time_interval.py
utils/: __init__.py  get_temp.py
